va2 and various other stuff

--- a/src/html/book.html
+++ b/src/html/book.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <include src="./partials/head.html" locals='{"pathHeadPrefix": "../", "pageTitle": "Brotherland - Book"}' />
+        <include src="./partials/head.html" locals='{"pathHeadPrefix": "../", "pageTitle": "Brotherland - Buch"}' />
     </head>
 
     <body class="bg-white text-gray-700">
@@ -9,8 +9,9 @@
             <include src="./partials/nav.html" locals='{"pathPrefix": "./", "active": "book"}'></include>
         </header>
 
-        <main class="m-auto font-crimson-text">
+        <main class="m-auto font-crimson-text font-semibold text-lg tracking-tight">
             <div class="flex flex-col items-center justify-start">
+                <img src="/public/images/loading.jpg?width=400" class="h-fit w-80" />
                 <div>Ein Foto-Text-Buch mit mehr Interviews, Fotos und Archivmaterial ist in Arbeit.</div>
             </div>
         </main>
