--- a/src/html/exhibits.html
+++ b/src/html/exhibits.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <include src="./partials/head.html" locals='{"pathHeadPrefix": "../", "pageTitle": "Brotherland - Book"}' />
+        <include src="./partials/head.html" locals='{"pathHeadPrefix": "../", "pageTitle": "Brotherland - Ausstellungen"}' />
     </head>
 
     <body class="bg-white text-gray-700">
@@ -11,13 +11,13 @@
 
         <main class="m-auto">
             <div id="simplelightboxgallery" class="gallery grid grid-cols-4 gap-4 xl:grid-cols-5 2xl:grid-cols-6">
-                <img src="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_01.jpg" title="" class="w-full" />
-                <img src="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_02.jpg" title="" class="w-full" />
-                <img src="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_03.jpg" title="" class="w-full" />
-                <img src="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_04.jpg" title="" class="w-full" />
-                <img src="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_05.jpg" title="" class="w-full" />
-                <img src="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_06.jpg" title="" class="w-full" />
-                <img src="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_07.jpg" title="" class="w-full" />
+                <img src="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_01.jpg" title="" class="w-full cursor-pointer" />
+                <img src="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_02.jpg" title="" class="w-full cursor-pointer" />
+                <img src="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_03.jpg" title="" class="w-full cursor-pointer" />
+                <img src="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_04.jpg" title="" class="w-full cursor-pointer" />
+                <img src="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_05.jpg" title="" class="w-full cursor-pointer" />
+                <img src="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_06.jpg" title="" class="w-full cursor-pointer" />
+                <img src="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_07.jpg" title="" class="w-full cursor-pointer" />
             </div>
         </main>
     </body>
