--- a/src/html/interviews/intrvw_ajm02.html
+++ b/src/html/interviews/intrvw_ajm02.html
@@ -16,8 +16,8 @@ keinen Unterschied. Das war früher Sklaverei und jetzt ist sie modern.`,
                 author: "Augusto Jone Munjunga",
                 authorLink: "../bio.html#munjunga",
                 audioFilePath: "/public/audio/AJM_02.mp3",
-                imageFilePath: "",
-                imageCaption: "",
+                imageFilePath: "/public/images/mittweida_vertragsarbeiter.jpg",
+                imageCaption: "Vertragsarbeiter aus Mosambik 1987 in Mittweida. Bildcredit: Bundesarchiv, Bild 183-1987-0618-301/CC-BY-SA 3.0",
                 additionalContext: "",
                 prevLink: "intrvw_ajm01.html",
                 nextLink: "intrvw_ajm03.html",
