--- a/src/html/virtual-exhibits/ve2.html
+++ b/src/html/virtual-exhibits/ve2.html
@@ -23,16 +23,16 @@
                 ></a>
             </div>
 
-            <main class="flex flex-col font-crimson-text text-xl font-bold">
-                <div class="flex h-[40rem]">
-                    <div class="relative flex min-h-min basis-1/2 flex-col justify-center pr-1">
-                        <span class="pr-20 text-left">
+            <main class="flex flex-col font-crimson-text tracking-tight text-xl font-bold">
+                <div class="relative flex h-fit w-full">
+                    <div class="relative flex min-h-min basis-1/2 flex-col items-start justify-center pr-20">
+                        <span class="text-left">
                             Es wirkt so, als ob die DDR nur Show gemacht hätte mit dem Thema Solidarität. Wir sind so erzogen worden in der
                             Schule, aber wenn du es im Nachhinein betrachtest, war überhaupt gar kein Kontakt gewollt mit den Ausländern.
                         </span>
 
                         <!-- Audio -->
-                        <div class="mx-auto mt-4 flex w-1/3 justify-center rounded-sm bg-gray-900 px-2 py-8">
+                        <div class="mx-auto w-1/5">
                             <include
                                 src="./partials/interview_audio.html"
                                 locals='{"audioFilePath": "../../../public/audio/01_J_R_01.mp3", "title": ""}'
@@ -41,25 +41,25 @@
                     </div>
                     <div class="ml-1 mr-4 flex min-h-min basis-1/2 flex-col">
                         <!-- Plattenbauten Hoch -->
-                        <div class="relative aspect-3/2 w-full overflow-hidden rounded-sm">
-                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_06.jpg" class="absolute h-full w-full object-cover" />
+                        <div class="relative aspect-3/2 w-full">
+                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_06.jpg" />
                         </div>
                         <!-- Plattenbauten mittelhoch -->
-                        <div class="relative aspect-3/2 w-full overflow-hidden rounded-sm pt-2">
-                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_07.jpg" class="absolute h-full w-full object-cover" />
+                        <div class="relative aspect-3/2 w-full pt-2">
+                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_07.jpg" />
                         </div>
                     </div>
                 </div>
 
-                <div class="mt-12 flex h-[60rem]">
-                    <div class="-mt-20 flex basis-1/2 flex-col justify-between pr-1">
+                <div class="-translate-y-[7.5%] flex h-fit">
+                    <div class="flex w-1/2 flex-col justify-between items-center pr-16">
                         <!-- Hausecke; türkise Fenster -->
-                        <div class="relative mr-12 aspect-2/3 w-full overflow-hidden rounded-sm">
-                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_08.jpg" class="absolute h-full w-full object-cover" />
+                        <div class="relative aspect-2/3 w-full rounded-sm">
+                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_08.jpg" />
                         </div>
 
                         <!-- Audio "Die kannten keine Schwarzen" -->
-                        <div class="mb-20 flex w-full justify-center rounded-sm bg-gray-900 px-2 py-8">
+                        <div class="w-4/5 mx-auto pb-24">
                             <include
                                 src="./partials/interview_audio.html"
                                 locals='{"audioFilePath": "../../../public/audio/02_die_kannten_keine_Schwarzen.mp3", "title": ""}'
@@ -67,22 +67,22 @@
                             </include>
                         </div>
                     </div>
-                    <div class="flex basis-1/2 flex-col justify-end pl-1">
+                    <div class="flex w-1/2 flex-col justify-end pt-96">
                         <!-- Feuerzeug -->
-                        <div class="relative ml-8 mt-24 aspect-2/3 w-full overflow-hidden rounded-sm">
-                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_09.jpg" class="absolute h-full w-full object-cover" />
+                        <div class="ml-auto aspect-2/3 w-4/5 overflow-hidden rounded-sm">
+                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_09.jpg" />
                         </div>
                     </div>
                 </div>
 
-                <div class="flex h-[60rem] pt-14">
-                    <div class="basis-2/3 pb-24 pr-8">
+                <div class="flex">
+                    <div class="w-2/3 pr-8">
                         <!-- Nahaufnahme Interviewpartner -->
-                        <div class="relative aspect-2/3 w-full overflow-hidden rounded-sm">
-                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_010.jpg" class="absolute h-full w-full object-cover" />
+                        <div class="aspect-2/3 w-full">
+                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_010.jpg" />
                         </div>
                     </div>
-                    <div class="mt-auto basis-1/3">
+                    <div class="mt-auto w-1/3 translate-y-1/2">
                         <!-- Text "Damals in der DDR hat man.."  -->
                         <span>
                             Damals in der DDR hat man gesagt, es gäbe keine Rassendiskriminierung. Aber für uns gab es die. Wenn wir in die
@@ -93,15 +93,15 @@
                     </div>
                 </div>
 
-                <div class="flex h-[40rem] pt-24">
-                    <div class="flex w-full flex-col justify-between">
+                <div class="relative flex pt-44 justify-between">
+                    <div class="flex w-6/12 flex-col justify-between pr-20">
                         <!-- Schwimmbad -->
-                        <div class="relative -mt-12 aspect-3/2 w-full overflow-hidden rounded-sm">
-                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_011.jpg" class="absolute object-cover" />
+                        <div class="aspect-3/2 w-full">
+                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_011.jpg"  />
                         </div>
 
                         <!-- Audio unterhalb v. Schwimmbad -->
-                        <div class="-mb-16 flex w-full justify-center rounded-sm bg-gray-900 px-2 py-8">
+                        <div class="w-full">
                             <include
                                 src="./partials/interview_audio.html"
                                 locals='{"audioFilePath": "../../../public/audio/04_ein_freundschaftliches_verhältnis.mp3", "title": "ein freundschatliches Verhältnis"}'
@@ -110,9 +110,9 @@
                         </div>
                     </div>
 
-                    <div class="z-10 -mx-32 w-full pt-44">
+                    <div class="absolute z-10 w-full translate-y-64">
                         <!-- Audio zw. Schwimmbad & Datsche -->
-                        <div class="flex w-full justify-center rounded-sm bg-gray-900 px-2 py-8">
+                        <div class="w-1/3 mx-auto">
                             <include
                                 src="./partials/interview_audio.html"
                                 locals='{"audioFilePath": "../../../public/audio/03_du_hattest_gar_nicht_die_möglichkeit.mp3", "title": "du hattest gar nicht die Möglichkeit"}'
@@ -121,23 +121,23 @@
                         </div>
                     </div>
 
-                    <div class="w-full pt-32">
+                    <div class="w-5/12 pl-4 translate-y-52">
                         <!-- Datsche -->
-                        <div class="relative aspect-2/3 w-full overflow-hidden rounded-sm">
-                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_012.jpg" class="absolute h-full w-full object-cover" />
+                        <div class="aspect-2/3 w-full">
+                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_012.jpg" />
                         </div>
                     </div>
                 </div>
 
-                <div class="relative mt-36 flex h-[60rem] w-full">
-                    <div class="flex w-3/5 flex-col justify-between">
+                <div class="relative flex h-fit pt-64 w-full pb-20">
+                    <div class="w-3/5 translate-y-60 pr-12">
                         <!-- Baum -->
-                        <div class="relative mt-44 aspect-2/3 w-full overflow-hidden rounded-sm">
-                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_013.jpg" class="absolute h-full w-full object-cover" />
+                        <div class="aspect-2/3 w-full">
+                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_013.jpg" />
                         </div>
                     </div>
 
-                    <div class="flex w-2/5 flex-col items-start justify-start pl-4">
+                    <div class="flex w-2/5 flex-col items-start justify-start">
                         <div>
                             Keiner hat uns die Geschichte von Deutschland erzählt. Dann auf einmal kommt eine Gruppe von Jugendlichen, die
                             sagen sie sind die Nachfolger von Hitler. „Wir repräsentieren Hitler und Hitler hat die Menschen wie euch nicht
