--- a/src/html/virtual-exhibits/ve3.html
+++ b/src/html/virtual-exhibits/ve3.html
@@ -23,7 +23,7 @@
                 ></a>
             </div>
 
-            <main class="flex flex-col font-crimson-text text-xl font-bold">
+            <main class="flex flex-col font-crimson-text tracking-tight text-xl font-bold">
                 <div class="flex h-[76rem]">
                     <div class="relative flex h-full basis-1/2 flex-col justify-between pr-1">
                         <!-- Audio -->
