--- a/src/html/project.html
+++ b/src/html/project.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <include src="./partials/head.html" locals='{"pathHeadPrefix": "../", "pageTitle": "Brotherland - Project"}' />
+        <include src="./partials/head.html" locals='{"pathHeadPrefix": "../", "pageTitle": "Brotherland - Projekt"}' />
     </head>
 
     <body class="bg-white text-gray-700">
@@ -9,7 +9,7 @@
             <include src="./partials/nav.html" locals='{"pathPrefix": "./", "active": "project"}'></include>
         </header>
 
-        <main class="flex flex-col items-center justify-start font-crimson-text text-lg font-semibold">
+        <main class="flex flex-col items-center justify-start font-crimson-text tracking-tight text-lg font-semibold">
             <!-- 1. -->
             <div class="mb-6 flex items-center justify-between">
                 <div class="w-1/2 pr-8 text-justify">
@@ -17,7 +17,7 @@
                     wird durch die Kontextualisierung von Fotos, Archivmaterial und Portraits - verknüpft mit Interviews - dargestellt.
                 </div>
                 <div class="w-1/2 pl-8">
-                    <div class="relative aspect-3/2 w-full grayscale transition-[filter] ease-linear hover:bg-slate-400 hover:grayscale-0">
+                    <div class="relative aspect-3/2 w-full grayscale transition-[filter] ease-linear hover:grayscale-0">
                         <a href="virtual-exhibits/ve2.html" class="group">
                             <img
                                 src="/public/images/Zaninelli_Jakobs_BROTHERLAND_The_Truth_Lies_in_Rostock__02.jpg"
@@ -34,8 +34,8 @@
             <div class="mb-20 flex items-center justify-between">
                 <div class="w-4/5 pr-8">
                     <!-- Image placeholders: Zaninelli_Jakobs_BROTHERLAND_04.jpg -->
-                    <div class="relative aspect-2/3 w-full grayscale transition-[filter] ease-linear hover:bg-slate-400 hover:grayscale-0">
-                        <a href="virtual-exhibits/ve3.html" class="group">
+                    <div class="relative aspect-2/3 w-full grayscale transition-[filter] ease-linear hover:grayscale-0">
+                        <a href="virtual-exhibits/ve2.html" class="group">
                             <img
                                 src="/public/images/Zaninelli_Jakobs_BROTHERLAND_04.jpg"
                                 class="cursor-ve absolute h-full w-full object-cover"
@@ -81,8 +81,8 @@
                 </div>
                 <div class="w-4/5 pl-8">
                     <!-- Image placeholders:  -->
-                    <div class="relative aspect-2/3 w-full grayscale transition-[filter] ease-linear hover:bg-slate-400 hover:grayscale-0">
-                        <a href="virtual-exhibits/ve4.html" class="group">
+                    <div class="relative aspect-2/3 w-full grayscale transition-[filter] ease-linear hover:grayscale-0">
+                        <a href="virtual-exhibits/ve2.html" class="group">
                             <img
                                 src="/public/images/Zaninelli_Jakobs_BROTHERLAND_03.jpg"
                                 class="cursor-ve absolute h-full w-full object-cover"
@@ -94,9 +94,9 @@
             <!-- 4. -->
             <div class="mb-6 flex items-center justify-between">
                 <div class="w-4/5 pr-8">
-                    <div class="relative aspect-3/2 w-full grayscale transition-[filter] ease-linear hover:bg-slate-400 hover:grayscale-0">
+                    <div class="relative aspect-3/2 w-full grayscale transition-[filter] ease-linear hover:grayscale-0">
                         <!-- Image placeholders: -->
-                        <a href="#" class="group">
+                        <a href="virtual-exhibits/ve2.html" class="group">
                             <img
                                 src="/public/images/Zaninelli_Jakobs_BROTHERLAND_035.jpg"
                                 class="cursor-ve w-full"
