--- a/src/html/exhibits.html
+++ b/src/html/exhibits.html
@@ -18,6 +18,27 @@
                 <img src="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_05.jpg" title="" class="w-full cursor-pointer" />
                 <img src="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_06.jpg" title="" class="w-full cursor-pointer" />
                 <img src="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_07.jpg" title="" class="w-full cursor-pointer" />
+                <img src="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_08.jpg" title="" class="w-full cursor-pointer" />
+                <img src="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_09.jpg" title="" class="w-full cursor-pointer" />
+                <img src="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_010.jpg" title="" class="w-full cursor-pointer" />
+                <img src="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_011.jpg" title="" class="w-full cursor-pointer" />
+                <img src="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_012.jpg" title="" class="w-full cursor-pointer" />
+                <img src="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_013.jpg" title="" class="w-full cursor-pointer" />
+                <img src="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_014.jpg" title="" class="w-full cursor-pointer" />
+                <img src="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_015.jpg" title="" class="w-full cursor-pointer" />
+                <img src="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_016.jpg" title="" class="w-full cursor-pointer" />
+                <img src="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_017.jpg" title="" class="w-full cursor-pointer" />
+                <img src="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_018.jpg" title="" class="w-full cursor-pointer" />
+                <img src="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_019.jpg" title="" class="w-full cursor-pointer" />
+                <img src="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_020.jpg" title="" class="w-full cursor-pointer" />
+                <img src="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_021.jpg" title="" class="w-full cursor-pointer" />
+                <img src="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_022.jpg" title="" class="w-full cursor-pointer" />
+                <img src="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_023.jpg" title="" class="w-full cursor-pointer" />
+                <img src="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_024.jpg" title="" class="w-full cursor-pointer" />
+                <img src="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_025.jpg" title="" class="w-full cursor-pointer" />
+                <img src="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_026.jpg" title="" class="w-full cursor-pointer" />
+                <img src="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_027.jpg" title="" class="w-full cursor-pointer" />
+                <img src="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_028.jpg" title="" class="w-full cursor-pointer" />
             </div>
         </main>
     </body>
