--- a/src/index.html
+++ b/src/index.html
@@ -5,26 +5,28 @@
     </head>
 
     <body class="bg-white text-gray-700">
-        <div class="flex flex-row place-items-center">
-            <div class="relative aspect-2/3 h-screen">
+        <div class="flex items-center justify-start">
+            <div class="relative aspect-2/3 h-screen min-w-xl">
                 <img src="../public/images/Zaninelli_Jakobs_BROTHERLAND_01.jpg" class="h-full w-full object-cover" />
             </div>
-            <div class="w-1/2 font-playfair-display text-2xl font-medium uppercase">
-                <nav>
+            <div class="pl-10 flex flex-col justify-between">
+                <div class="font-roboto tracking-tight text-2xl justify-left uppercase text-gray-300 md:text-8xl leading-2 leading whitespace-pre">Brother
+land</div>
+                <nav class="mt-12 min-w-fit font-crimson-text text-2xl font-medium uppercase">
                     <a href="./html/project.html" alt="Project">
-                        <div class="w-1/3 rounded-sm px-4 py-2 transition-colors ease-linear hover:bg-gray-300">Projekt</div>
+                        <div class="rounded-r-sm   pl-1 py-2 transition-colors ease-linear hover:bg-gray-300">Projekt</div>
                     </a>
                     <a href="./html/interviews/intrvw_ajm01.html" alt="Interviews">
-                        <div class="w-1/3 rounded-sm px-4 py-2 transition-colors ease-linear hover:bg-gray-300">Interviews</div>
+                        <div class="rounded-r-sm   pl-1 py-2 transition-colors ease-linear hover:bg-gray-300">Interviews</div>
                     </a>
                     <a href="./html/book.html" alt="Book">
-                        <div class="w-1/3 rounded-sm px-4 py-2 transition-colors ease-linear hover:bg-gray-300">Buch</div>
+                        <div class="rounded-r-sm   pl-1 py-2 transition-colors ease-linear hover:bg-gray-300">Buch</div>
                     </a>
                     <a href="./html/exhibits.html" alt="Exhibits">
-                        <div class="w-1/3 rounded-sm px-4 py-2 transition-colors ease-linear hover:bg-gray-300">Ausstellungen</div>
+                        <div class="rounded-r-sm   pl-1 py-2 transition-colors ease-linear hover:bg-gray-300">Ausstellungen</div>
                     </a>
                     <a href="./html/about.html" alt="About">
-                        <div class="w-1/3 rounded-sm px-4 py-2 transition-colors ease-linear hover:bg-gray-300">Über Uns</div>
+                        <div class="rounded-r-sm   pl-1 py-2 transition-colors ease-linear hover:bg-gray-300">Über Uns</div>
                     </a>
                 </nav>
             </div>
