--- a/src/html/virtual-exhibits/ve4.html
+++ b/src/html/virtual-exhibits/ve4.html
@@ -11,14 +11,14 @@
 
         <div class="relative">
             <!-- Hover links -->
-            <div class="absolute h-full w-full">
+            <div class="absolute h-full w-full pointer-events-none">
                 <a
-                    class="cursor-ve absolute left-0 top-0 z-50 h-full sm:w-1/12 md:w-[10%] lg:w-1/6 xl:w-1/5 2xl:w-1/4"
+                    class="cursor-ve absolute left-0 top-0 z-50 h-full sm:w-1/12 md:w-[10%] lg:w-1/6 xl:w-1/5 2xl:w-1/4 pointer-events-auto"
                     href="./ve3.html"
                 ></a>
 
                 <a
-                    class="cursor-ve absolute right-0 top-0 z-50 h-full sm:w-1/12 md:w-[10%] lg:w-1/6 xl:w-1/5 2xl:w-1/4"
+                    class="cursor-ve absolute right-0 top-0 z-50 h-full sm:w-1/12 md:w-[10%] lg:w-1/6 xl:w-1/5 2xl:w-1/4 pointer-events-auto"
                     href="./ve2.html"
                 ></a>
             </div>
